# culturalmetaverse

./: .pyproject.toml.swp  Chatbot.py  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: .config.toml
app/: =3.0.0  rag_conversation.py  server.ipynb  server.py  test.ipynb
rag_conversation/: =3.0.0  __init__.ipynb  chain.ipynb
