[tool.poetry]
name = "culturalmetaverse"
version = "0.1.0"
description = ""
authors = ["Yiling"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "3.10.12"
uvicorn = "^0.30.1"
langserve = {extras = ["server"], version = ">=0.0.2"}
pydantic = "^2.8.2"
groq = "^0.9.0"
langchain-groq = "^0.1.6"
sse-starlette = ">=1.3.0"
tf-keras = "^2.16.0"
llamaapi = "^0.1.36"
pypdf = "^4.2.0"
langchain-community = "^0.2.6"
langchain-pinecone ="^0.1.1" 
sentence-transformers = "^3.0.1"
transformers = "^4.42.3"
langchain-huggingface = "^0.0.3"
tensorflow = "^2.16.2"
langchainhub = "^0.1.20"
langchain = "^0.2.6"
pinecone-client = ">=3.2.2"

[tool.langserve]
export_module = "rag_conversation"
export_attr = "chain"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
